[package]
edition = "2021"
name = "rnpm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
futures = "0.3.19"
hyper = {version = "0.14", features = ["full"]}
hyper-tls = "0.5.0"
moka = {version = "0.7", features = ["future"]}
node-semver = "2.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
