[package]
edition = "2021"
name = "rnpm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-recursion = "1.0"
bytes = "1.1"
console = "0.15"
deadqueue = "0.2"
flexi_logger = {version = "0.22", features = ["use_chrono_for_offset"]}
futures = "0.3.19"
log = "0.4"
moka = {version = "0.7", features = ["future"]}
node-semver = "2.0"
rand = "0.8"
reqwest = {version = "0.11", features = ["gzip", "deflate", "brotli", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
waitmap = "1.1"
